---------------------------------------------------------------------------------------------------
Version: 1.3.7
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.3.6
Date: 2025-03-09
  Changes:
    - Renamed the API 'redrawn_connections_keep' on space locations to 'redrawn_connections_exclude'. Using 'redrawn_connections_keep' will still work but is undocumented.
---------------------------------------------------------------------------------------------------
Version: 1.3.5
Date: 2025-03-08
  Changes:
    - Fixed leaving in some test code which caused Nauvis to vanish!
---------------------------------------------------------------------------------------------------
Version: 1.3.4
Date: 2025-03-08
  Changes:
    - Hidden space locations are now excluded from the triangulation.
---------------------------------------------------------------------------------------------------
Version: 1.3.3
Date: 2025-02-25
  Changes:
    - Replaced the approximate distance formula with an exact one.
    - Asteroids on routes to Maraxsis are now generated like those to Aquilo.
---------------------------------------------------------------------------------------------------
Version: 1.3.2
Date: 2025-02-18
  Changes:
    - Reverted the changes in 1.3.0 for now.
---------------------------------------------------------------------------------------------------
Version: 1.3.1
Date: 2025-02-17
  Changes:
    - Added the setting Redrawn-Space-Connections-real-space-triangulation.
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 2025-02-17
  Changes:
    - Connections with redrawn_connections_keep now form a natural part of the resulting triangulation.
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 2025-02-07
  Changes: