@@ -1,0 +1,5 @@
+[mod-setting-name]
+Redrawn-Space-Connections-route-length-multiplier=Route length multiplier
+
+[mod-setting-description]
+Redrawn-Space-Connections-route-length-multiplier=Applies before lengths are rounded to the nearest 1000km. Does not apply to routes for which another mod has specifically requested control over its length.r
