@@ -2,6 +2,7 @@
 Version: 1.3.7
 Date: ????
   Changes:
+    - Added mod setting to multiply all route lengths by a value (defaults to 1).
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.6
 Date: 2025-03-09
